# citygen

./: .gitignore  Cargo.toml  references.txt
cityservice/: Cargo.toml
cityservice/src/: error.rs  main.rs
cityservice/src/city/: mod.rs  objects.rs  stats.rs
cityservice/src/city/geom/: circle.rs  mod.rs  rectangle.rs  vector.rs
cityservice/src/city/settings/: config.rs  error.rs  mod.rs  setting.rs  tree.rs
static/: collapse.js  generate.js  main.html  style.css
static/docs/: tutorial.html  welcome.html
